# journal-rust

./: .gitignore  Cargo.toml  README.md  bugs.txt  for-next-session.txt  ftp.py  recs.txt
oldsrc/: main.rs
oldsrc/journal/: args.rs  calculators.rs  drivers.rs  file.rs  mod.rs
oldsrc/journal/query/: api.rs  mod.rs  user.rs
src/: lib.rs  main.rs  om_api.rs
src/cli/: args.rs  helper.rs  mod.rs
src/cli/interaction/: ask.rs  mod.rs  primitive.rs  q_basic.rs  qtemp.rs  question.rs
src/cli/utils/: enums.rs  functions.rs
src/core/: chrono.rs  file.rs  geo.rs  helper.rs  mod.rs  str_man.rs
src/core/weather/: mod.rs  query.rs
src/journal/: args.rs  calculators.rs  drivers.rs  file.rs  mod.rs  query.rs  test.rs
src/journal/query/: api.rs  generic.rs  mod.rs  open_meteo.rs  user.rs
