[package]
name = "journal-rust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.3.5", features = ["derive"] }
curl = "0.4.44"
dirs = "4.0.0"
isocountry = "0.3.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tempfile = "3.6.0"
toml = "0.7.5"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
